--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black">
@@ -58,12 +58,25 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:padding="@dimen/_10dp"
+            android:paddingStart="@dimen/_10dp"
+            android:paddingEnd="@dimen/_38dp"
             android:text="@={viewModel.password}"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emailEdt" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/passwordShow"
+            android:layout_width="@dimen/_20dp"
+            android:layout_height="@dimen/_20dp"
+            android:layout_marginEnd="@dimen/_10dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_cover_password"
+            app:layout_constraintBottom_toBottomOf="@id/passwordEdt"
+            app:layout_constraintEnd_toEndOf="@id/passwordEdt"
+            app:layout_constraintTop_toTopOf="@id/passwordEdt" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginButton"
