--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,7 +19,9 @@
     <dimen name="_65dp">65dp</dimen>
     <dimen name="_80dp">80dp</dimen>
     <dimen name="_100dp">100dp</dimen>
+    <dimen name="_108dp">108dp</dimen>
     <dimen name="_150dp">150dp</dimen>
+    <dimen name="_180dp">180dp</dimen>
 
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_13sp">13sp</dimen>
